--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "mysql2": "^3.6.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "typescript": "^5",
